# transit-lake

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
.github/workflows/: ci.yml
dagster_proj/: checks.py  dbt.py  definitions.py  resources.py  schedules.py
dagster_proj/assets/: bronze.py  silver.py
dashboard/: app.py
dbt/: .sqlfluff  dbt_project.yml  profiles.yml
dbt/macros/: surrogate_key.sql  test_in_range.sql
dbt/models/marts/: _marts__models.yml  dim_agency.sql  dim_date.sql  dim_mode.sql  dim_route.sql  dim_segment.sql  dim_stop.sql  fact_congestion.sql  fact_trip_delay.sql  fact_vehicle_position.sql  fact_weather_daily.sql  mart_busiest_stops.sql  mart_congestion_by_hour.sql  mart_congestion_hotspots.sql  mart_daily_delay_trend.sql  mart_delay_vs_congestion.sql  mart_delay_vs_weather.sql  mart_fleet_activity_by_route.sql  mart_otp_by_mode_hour.sql  mart_otp_by_route.sql  mart_otp_by_route_hour.sql  mart_pipeline_freshness.sql  mart_route_service_levels.sql  mart_route_summary.sql  mart_segment_speed_profile.sql
dbt/models/staging/: _silver__sources.yml  _stg__models.yml  stg_chicago__congestion.sql  stg_cta__routes.sql  stg_cta__stop_times.sql  stg_cta__stops.sql  stg_cta__trips.sql  stg_cta__vehicle_positions.sql  stg_open_meteo__weather.sql
docs/: DEPLOY.md  data_dictionary.md  sources.md
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: FleetMap.tsx
frontend/lib/: duck.ts
frontend/public/data/: congestion_by_hour.parquet  congestion_hotspots.parquet  delay_vs_congestion.parquet  delay_vs_weather.parquet  fleet_latest.parquet  otp_by_mode_hour.parquet  otp_by_route.parquet  pipeline_freshness.parquet
ingestion/: config.py  gtfs_rt.py  gtfs_rt_protobuf.py  gtfs_static.py  poller.py  quality.py  socrata.py  weather.py
scripts/: backfill_train_protobuf.py  ci_bootstrap_silver.py  demo_failing_check.py  export_marts_parquet.py  export_marts_snapshot.py  make_dashboard_gif.py
