[project]
name = "transitlake"
version = "0.1.0"
description = "A Dagster-orchestrated medallion lakehouse for Chicago multi-modal transit data (GTFS + GTFS-RT + traffic + weather)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # Orchestration
    "dagster>=1.9,<2.0",
    "dagster-webserver>=1.9,<2.0",
    "dagster-duckdb>=0.25",
    # Warehouse / query engine
    "duckdb>=1.1",
    # Transformation
    "dbt-core>=1.8,<2.0",
    "dbt-duckdb>=1.8,<2.0",
    # Data wrangling / IO
    "polars>=1.0",
    "pyarrow>=17.0",
    # Ingestion clients
    "requests>=2.32",
    "sodapy>=2.2",
    "gtfs-realtime-bindings>=1.0",
    "protobuf>=4.25",
    "python-dotenv>=1.0",
    # Data quality — used by the Dagster asset checks, so part of the core env.
    "great-expectations>=1.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.40",
    "plotly>=5.24",
]
dev = [
    "sqlfluff>=3.2",
    "sqlfluff-templater-dbt>=3.2",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dagster_proj", "ingestion"]

[tool.dagster]
module_name = "dagster_proj.definitions"
code_location_name = "transitlake"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# GE progress bars are silenced via os.environ before the GE import.
"ingestion/quality.py" = ["E402"]
